8245000: Windows GDI functions don't support large pages

Reviewed-by: kbarrett, sjohanss